beta version with TagCtrl
mouse over doesn't work quite correct in this beta

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset=utf-8>
   <title>Doogies TagTextField</title>
+  <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="application.css" type="text/css" charset="utf-8">
   <script src="application.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" charset="utf-8">
